--- a/.github/workflows/terraform-devops.yml
+++ b/.github/workflows/terraform-devops.yml
@@ -109,12 +109,12 @@ jobs:
           
           *Pusher: @${{ github.actor }}, Action: \`${{ github.event_name }}\`, Working Directory: \`${{ env.tf_actions_working_dir }}\`, Workflow: \`${{ github.workflow }}\`*`;
             
-          github.rest.issues.createComment({
-            issue_number: context.issue.number,
-            owner: context.repo.owner,
-            repo: context.repo.repo,
-            body: output
-          })
+          # github.rest.issues.createComment({
+          #   issue_number: context.issue.number,
+          #   owner: context.repo.owner,
+          #   repo: context.repo.repo,
+          #   body: output
+          # })
         
     # On push to main, build or change infrastructure according to Terraform configuration files
     - name: Terraform Apply
