--- a/.github/workflows/terraform-devops.yml
+++ b/.github/workflows/terraform-devops.yml
@@ -87,6 +87,7 @@ jobs:
         # # show only the changes
         # cat tfplan.json | jq '[.resource_changes[] | {type: .type, name: .change.after.name, actions: .change.actions[]}]' 
         # cat tfplan.json | jq -r '(.resource_changes[] | [.change.actions[], .type, .change.after.name]) | @tsv'
+
     - name: Add Terraform Plan Comment
       id: comment
       uses: actions/github-script@v6
@@ -109,12 +110,14 @@ jobs:
           
           *Pusher: @${{ github.actor }}, Action: \`${{ github.event_name }}\`, Working Directory: \`${{ env.tf_actions_working_dir }}\`, Workflow: \`${{ github.workflow }}\`*`;
             
-          # github.rest.issues.createComment({
-          #   issue_number: context.issue.number,
-          #   owner: context.repo.owner,
-          #   repo: context.repo.repo,
-          #   body: output
-          # })
+          github.rest.issues.createComment({
+            issue_number: context.issue.number,
+            owner: context.repo.owner,
+            repo: context.repo.repo,
+            body: output
+          })
+
+ 
         
     # On push to main, build or change infrastructure according to Terraform configuration files
     - name: Terraform Apply
